# optim-gemm

./: README.md
aarch64/: CMakeLists.txt  MMult0.cpp  MMult1.cpp  MMult_4x4_10.cpp  MMult_4x4_11.cpp  MMult_4x4_12.cpp  MMult_4x4_21.cpp  MMult_4x4_8.cpp  MMult_4x4_9.cpp  MMult_mperf.cpp  REF_MMult.cpp  asm_common.h  compare_matrices.cpp  copy_matrix.cpp  makefile  megengine.cpp  megengine.h  parameters.h  print_matrix.cpp  random_matrix.cpp  test_MMult.cpp
